this is a test message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <!-- Your content goes here -->
-    <h1>Hello World!</h1>
+    <h1>Fiona Wiersch</h1>
+    <h2>Green</h2>
+    <p>this is a paragraph</p>
     <div id="kitty">
         <img src="images/kitten.jpg" alt="This is a kitten.">
         <button id="btn">Click me</button>
