--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="/css/style.css">
+
+<head><!--Tab name-->
+    <link rel="stylesheet" href="/css/styles.css">
     <title>Frances!?</title>
 </head>
+
 <body>
-    <!-- Your content goes here -->
     <h1>Fiona Wiersch</h1>
     <h2>Green</h2>
     <p>this is a paragraph</p>
