--- a/index.html
+++ b/index.html
@@ -6,13 +6,18 @@
     <title>Frances!?</title>
 </head>
 
-<body>
+<body style="background-color: rgb(204, 231, 204);">
     <h1>Fiona Wiersch</h1>
     <h2>Green</h2>
     <p>this is a paragraph</p>
-    <div id="kitty">
-        <img src="images/kitten.jpg" alt="This is a kitten.">
-        <button id="btn">Click me</button>
+
+    <div>
+        <div class="container">
+        <div class="item">The first box</div>
+        <div class="item">The second box</div>
+        <div class="item">This is the Third box</div>
     </div>
+
+    
 </body>
 </html>
