--- a/index.html
+++ b/index.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head><!--Tab name-->
     <link rel="stylesheet" href="/css/styles.css">
-    <title>Frances!?</title>
-</head>
+    <head><!--Tab name-->
+        <link rel="stylesheet" href="/css/styles.css">
+        <title>Frances!?</title>
+    </head>
 
-<body style="background-color: rgb(94, 206, 94);">
-    <h1>Fiona Wiersch</h1>
-    <h2>Green</h2>
-    <p>this is a paraabswgbdngagraph</p>
+    <body style="background-color: rgb(94, 206, 94);">
+        <link rel="stylesheet" href="/css/styles.css">
+        <h1>Fiona Wiersch</h1>
+        <h2>Green</h2>
+        <p>this is a paraabswgbdngagraph</p>
 
-    <div>
-        <div class="container">
-        <div class="item">The first box</div>
-        <div class="item">The second box</div>
-        <div class="item">This is the Third box</div>
-    </div>
-
-    
-</body>
+        <div>
+            <div class="container">
+            <div class="item">The first box</div>
+            <div class="item">The second box</div>
+            <div class="item">This is the Third box</div>
+        </div>
+    </body>
 </html>
