--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/css/styles.css">
         <h1>Fiona Wiersch</h1>
         <h2>Green</h2>
-        <p>this is a paraabswgbdngagraph</p>
+        <p>this is a paraph</p>
 
         <div>
             <div class="container">
