--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <link rel="stylesheet" href="/css/styles.css">
     <head><!--Tab name-->
-        <link rel="stylesheet" href="/css/styles.css">
         <title>Frances!?</title>
     </head>
 
     <body style="background-color: rgb(94, 206, 94);">
-        <link rel="stylesheet" href="/css/styles.css">
-        <h1>Fiona Wiersch</h1>
-        <h2>Green</h2>
-        <p>this is a paraph</p>
+        <header>
+            <link rel="stylesheet" href="/css/styles.css">
+            <h1>Fiona Wiersch</h1>
+            <h2>Green</h2>
+            <p>this is a paraph</p>
 
-        <div>
-            <div class="container">
-            <div class="item">The first box</div>
-            <div class="item">The second box</div>
-            <div class="item">This is the Third box</div>
-        </div>
+            <div>
+                <div class="container">
+                <div class="item">The first box</div>
+                <div class="item">The second box</div>
+                <div class="item">This is the Third box</div>
+            </div>
+        </header>
+        <main>
+            
+        </main>
     </body>
 </html>
