--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     </head>
 
     <body style="background-color: rgb(94, 206, 94);">
-        <header>
-            <link rel="stylesheet" href="/css/styles.css">
+        <header style="color: lightcoral">
+            <link rel="stylesheet" href="styles.css">
             <h1>Fiona Wiersch</h1>
             <h2>Green</h2>
             <p>this is a paraph</p>
 
-            <div>
-                <div class="container">
-                <div class="item">The first box</div>
-                <div class="item">The second box</div>
-                <div class="item">This is the Third box</div>
-            </div>
+        <div>
+            <div class="container">
+            <div class="item">The first box</div>
+            <div class="item">The second box</div>
+            <div class="item">This is the Third box</div>
+        </div>
+
         </header>
         <main>
             
