--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Frances!?</title>
     </head>
 
-    <body style="background-color: rgb(94, 206, 94);">
+    <body style="background-color: rgb(182, 222, 182);">
         <header style="color: lightcoral">
             <link rel="stylesheet" href="styles.css">
             <h1>Fiona Wiersch</h1>
@@ -12,10 +12,10 @@
             <p>this is a paraph</p>
 
         <div>
-            <div class="container">
-            <div class="item">The first box</div>
-            <div class="item">The second box</div>
-            <div class="item">This is the Third box</div>
+            <div class="grid-container">
+            <div class="item">1</div>
+            <div class="item">2</div>
+            <div class="item">3</div>
         </div>
 
         </header>
