--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     </head>
 
     <body style="background-color: rgb(182, 222, 182);">
-        <header style="color: lightcoral">
+        <header>
             <link rel="stylesheet" href="styles.css">
             <h1>Fiona Wiersch</h1>
             <h2>Green</h2>
-            <p>this is a paraph</p>
+            <p>this is a pargggggaph</p>
 
         <div>
             <div class="grid-container">
