--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
             <h1>Fiona Wiersch</h1>
             <h2>Green</h2>
             <p>this is a pargggggGGGGGGGaph</p>
-
-        <div>
-            <div class="grid-container">
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
-        </div>
-
+            <div>
+                <div class="grid-container">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+            </div>
         </header>
         <main>
             
         </main>
+        <figure>
+            <img src="https://pbs.twimg.com/media/FTtuLQEXwAEEnWI.jpg:large" alt="txt for image?">
+        </figure>
     </body>
 </html>
