--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             
         </main>
         <figure>
-            <img src="https://pbs.twimg.com/media/FTtuLQEXwAEEnWI.jpg:large" alt="txt for image?">
+            <img src="https://pbs.twimg.com/media/FTtuLQEXwAEEnWI.jpg:large" style="width: 100px;height: 50px;"     alt="txt for image?">
         </figure>
     </body>
 </html>
