--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <link rel="stylesheet" href="styles.css">
             <h1>Fiona Wiersch</h1>
             <h2>Green</h2>
-            <p>this is a pargggggGGGGGGGaph</p>
+            <p>this is a pargggggGaph</p>
             <div>
                 <div class="grid-container">
                 <div class="item">1</div>
