--- a/index.html
+++ b/index.html
@@ -16,10 +16,18 @@
                 <div class="item">2</div>
                 <div class="item">3</div>
                 <div class="item">4</div>
+                <div class="item">5</div>
             </div>
         </header>
         <main>
-            
+            <div>
+                <div class="grid-container">
+                <div class="item">1</div>
+                <div class="item">2</div>
+                <div class="item">3</div>
+                <div class="item">4</div>
+                <div class="item">5</div>
+            </div>
         </main>
         <figure>
             <img src="https://pbs.twimg.com/media/FTtuLQEXwAEEnWI.jpg:large" style="width: 100px;height: 50px;"     alt="txt for image?">
