--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             <link rel="stylesheet" href="styles.css">
             <h1>Fiona Wiersch</h1>
             <h2>Green</h2>
-            <p>this is a pargggggGaph</p>
+            <p>this is a pargggggggggggggggGaph</p>
             <div>
                 <div class="grid-container">
                 <div class="item">1</div> 
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div>
-                <div class="grid-container">
+                <div class="flex-container">
                 <div class="item">1</div>
                 <div class="item">2</div>
                 <div class="item">3</div>
