--- a/index.html
+++ b/index.html
@@ -37,7 +37,37 @@
             order=place--make sure all are assigned a spot
             flex-shrink
             -->
+            <ul>
+                <li>Frogs are <b>cannibals</b> and may eat <sub>smaller</sub> frogs or even eat their own tadpoles</li>
+                <li>Frogs eat their own <i>skin</i>. This is a process called “<u>sloughing</u>.”</li>
+                <li>You can tell the age of a frog based on the <mark>bone rings</mark> inside of frogs bones</li>
+                <li>test lisfeqet for ting test</li>
+            </ul>
+            <form action="/submit" method="POST">
+
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name">
+                    <label for="email">Email:</label>
+                    <input type="text" id="email" name="email"><br>
+
+                    <label for="test">Test</label>
+                    <input type="radio" id="test" name="test"><br>
+            
+                    <label for="test2">Pick an option:</label>
+                    <select id="test2" name="test2">
+                        <option value="one">One</option>
+                        <option value="two">Two</option>
+                        <option value="three">Three</option>
+                    </select><br>
+
+                <label>
+                <input type="checkbox" name="test3" value="test3">
+                </label><br>
+                    
+                <input type="submit" value="submit!">
+            </form>
         </main>
+
         <figure>
             <img src="https://pbs.twimg.com/media/FTtuLQEXwAEEnWI.jpg:large" style="width: auto;height: 500px;" alt="txt for image?">
         </figure>
