--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <body style="background-color: rgb(182, 222, 182);">
         <header>
             <link rel="stylesheet" href="styles.css">
-            <h1>1Fiona Wiersch</h1>
+            
+            <h1 id="greeting">Welcome!</h1>
+            <form id="form">
+                <label for="name">Name:</label>
+                <input type="text" id="name" placeholder="placeholder">
+                <button type="submit" id="submit" >Submit</button>
+            </form>
+            <script src="script.js" defer></script>
             <h2>2Green</h2>
             <h3>3</h3>
             <h4>4</h4>
